@@ -465,6 +465,7 @@ Steven Scott
 Nick Seidenman
 Fred Sells
 Denis Severson
+Ha Shao
 Bruce Sherwood
 Pete Shinners
 Michael Shiplett
